--- a/nowhereonatrain/package.json
+++ b/nowhereonatrain/package.json
@@ -5,14 +5,21 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fullpage/react-fullpage": "^0.1.37",
     "@mui/icons-material": "^5.11.9",
+    "@mui/joy": "^5.0.0-alpha.75",
     "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.11.5",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.3.2",
+    "scroll-snap": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.9.0"
   }
 }
